<resources>
    <string name="app_name">Thoughtful</string>
    <string name="text_edit_hint">Put your thoughts here!</string>
    <string name="title_hint">Title</string>
    <string name="app_key">8koez12nqwamh5q</string>
    <string name="login_button">Login with Dropbox</string>
    <string name="action_change_account">Change Account</string>
    <string name="clear_button">Clear All</string>
    <string name="dropbox_account">Dropbox-Account:</string>
    <string name="clear_on_send">Clear On Send</string>
    <string name="no_clear_on_send">No Clear On Send</string>
</resources>
